--- a/gestao/home/index.html
+++ b/gestao/home/index.html
@@ -154,7 +154,7 @@ function TabelaCadastro(){
 function TabelaVendas(){
     $(document).ready(function(){
         $.ajax({
-            url: "../tabelavendas/index.php",
+            url: "../tabelaVendas/index.php",
             method:'GET',
             async:false,
             success:function(resultado){
